--- a/Notebooks/NB10_01__Pandas.ipynb
+++ b/Notebooks/NB10_01__Pandas.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MathMachado/DSWP/blob/master/Notebooks/NB10_01__Pandas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/medinabopp/DSWP/blob/master/Notebooks/NB10_01__Pandas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -4944,6 +4944,19 @@
       "source": [
         "## Exercício 1\n",
         "* A partir dos dataframes USA_Abbrev, USA_Area e USA_Population, construa o Dataframe USA contendo as COLUNAS state, abbreviation, area, ages, year, population.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C27XnENqIiYe"
+      },
+      "source": [
+        "https://raw.githubusercontent.com/medinabopp/DSWP/master/Dataframes/USA_Abbrev.csv\n",
+        "\n",
+        "https://raw.githubusercontent.com/medinabopp/DSWP/master/Dataframes/USA_Area.csv\n",
+        "\n",
+        "https://raw.githubusercontent.com/medinabopp/DSWP/master/Dataframes/USA_Population.csv"
       ]
     },
     {
