--- a/Notebooks/NB10_01__Pandas.ipynb
+++ b/Notebooks/NB10_01__Pandas.ipynb
@@ -1775,6 +1775,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "4p3NgspDLUKc"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "VS7_V15u0MgR"
       },
       "source": [
@@ -4967,6 +4978,97 @@
       "source": [
         "* Observação: A forma mais fácil de ler um arquivo CSV (a partir do Excell por exemplo) a partir do GitHub é clicar no arquivo csv no seu repositório do GitHub e em seguida clicar em 'raw'. Depois, copie o endereço apresentado no browser e cole na variável 'url'. Qualquer dúvida, leia o documento a seguir: https://towardsdatascience.com/3-ways-to-load-csv-files-into-colab-7c14fcbdcb92."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_PH23HZ8L8Mk"
+      },
+      "source": [
+        "import pandas as pd"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UvYOaRMNLiww"
+      },
+      "source": [
+        "url = 'https://raw.githubusercontent.com/medinabopp/DSWP/master/Dataframes/USA_Abbrev.csv'\n",
+        "#df_USA_Abbrev = pd.read_csv(url, index_col = 'PassengerId')\n",
+        "df_USA_Abbrev = pd.read_csv(url)\n",
+        "df_USA_Abbrev.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IaSqU185MQsI"
+      },
+      "source": [
+        "url = 'https://raw.githubusercontent.com/medinabopp/DSWP/master/Dataframes/USA_Area.csv'\n",
+        "#df_USA_Abbrev = pd.read_csv(url, index_col = 'PassengerId')\n",
+        "df_USA_Area = pd.read_csv(url)\n",
+        "df_USA_Area.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uQKRuFyvMmNr"
+      },
+      "source": [
+        "url = 'https://raw.githubusercontent.com/medinabopp/DSWP/master/Dataframes/USA_Population.csv'\n",
+        "#df_USA_Abbrev = pd.read_csv(url, index_col = 'PassengerId')\n",
+        "df_USA_Population = pd.read_csv(url)\n",
+        "df_USA_Population.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GmBJsEWAM5yC"
+      },
+      "source": [
+        " contendo as COLUNAS \n",
+        "  df_USA_Population.state, \n",
+        "  df_USA_Abbrev.abbreviation, \n",
+        "  df_USA_Area.area, \n",
+        "  df_USAPopulation.ages, year, population."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7Rwtk2ttNdhB"
+      },
+      "source": [
+        "df_Resultado = df_USA_Population.copy()\n",
+        "#acrescentando colunas a partir de outro dataframe\n",
+        "df_Resultado['Abbreviation'] = \n",
+        "df_Resultado"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mY4WrZpnM7sY"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
