--- a/Notebooks/NB10_01__Pandas.ipynb
+++ b/Notebooks/NB10_01__Pandas.ipynb
@@ -5021,6 +5021,30 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "6tzuEolV936L"
+      },
+      "source": [
+        "df_USA_Abbrev_Area = pd.merge(df_USA_Abbrev, df_USA_Area, on = ['state', 'state'], how = 'outer', indicator = True)\n",
+        "df_USA_Abbrev_Area.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JBuugM7VAyBq"
+      },
+      "source": [
+        "#exibe as linhas que não tem correspondência\n",
+        "df_USA_Abbrev_Area[df_USA_Abbrev_Area['_merge'] != 'both']"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "uQKRuFyvMmNr"
       },
       "source": [
@@ -5028,6 +5052,54 @@
         "#df_USA_Abbrev = pd.read_csv(url, index_col = 'PassengerId')\n",
         "df_USA_Population = pd.read_csv(url)\n",
         "df_USA_Population.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LjsRRDQUQvac"
+      },
+      "source": [
+        "df_USA_Abbrev.columns"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y3AGfGdnQvlF"
+      },
+      "source": [
+        "df_USA_Population.columns"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1Qu9j2coTYpR"
+      },
+      "source": [
+        "df_USA_Abbrev_Pop = pd.merge(df_USA_Population, df_USA_Abbrev, on = ['state_region','abbreviation'], how = 'left', indicator = True)\n",
+        "\n",
+        "df_USA_Abbrev_Pop.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z8rAFzpwPqNt"
+      },
+      "source": [
+        "df_USA_Abbrev_Pop = pd.merge(df_USA_Population, df_USA_Abbrev, on = ['state_region','abbreviation'], how = 'left', indicator = True)\n",
+        "\n",
+        "df_USA_Abbrev_Pop.head()"
       ],
       "execution_count": null,
       "outputs": []
@@ -5051,10 +5123,9 @@
         "id": "7Rwtk2ttNdhB"
       },
       "source": [
-        "df_Resultado = df_USA_Population.copy()\n",
-        "#acrescentando colunas a partir de outro dataframe\n",
-        "df_Resultado['Abbreviation'] = \n",
-        "df_Resultado"
+        "df_USA_Abbrev_Area_Pop = pd.merge(df_USA_Abbrev_Area, df_USA_Population, on = ['abbreviation', 'state_region'], how = 'outer', indicator = True)\n",
+        "\n",
+        "df_USA_Abbrev_Area_Pop.head()"
       ],
       "execution_count": null,
       "outputs": []
